# vote-gpt

./: .env.example  README.md  credentials.json  pyproject.toml  token.json
src/: main.py
src/vote_gpt/: forms.py  main.py  prompt.py  search.py
test/: test_fetch_search_results.py
tests/: test_e2e.py  test_fetch_search_results.py  test_forms.py
